<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="16dp"
                android:hint="@string/name_hint"
                android:inputType="textNoSuggestions"
                style="@style/customFontStyle"
                android:id="@+id/name_edit_text" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_toppings"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="187dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toppings_text_view"
                    android:text="@string/toppings"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="16dp"
                    style="@style/customFontStyle"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/whipped_cream"
                    android:id="@+id/whipped_cream_image"
                    android:layout_below="@id/toppings_text_view"
                    android:layout_marginLeft="28dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/chocolate_toppings"
                    android:id="@+id/chocolate_image"
                    android:layout_toRightOf="@id/whipped_cream_image"
                    android:layout_marginLeft="48dp"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/toppings_text_view" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:layout_below="@id/toppings_text_view"
                    android:text="@string/whipped_cream"
                    style="@style/customFontStyle"
                    android:paddingLeft="0dp"
                    android:id="@+id/whipped_cream_check" />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/chocolate"
                    style="@style/customFontStyle"
                    android:paddingLeft="0dp"
                    android:layout_below="@id/toppings_text_view"
                    android:layout_toRightOf="@id/whipped_cream_check"
                    android:id="@+id/chocolate_check"/>

            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_quantity"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                style="@style/customFontStyle"
                android:textAllCaps="true"
                android:id="@+id/quantity_category"
                android:textColor="@android:color/black"/>

            <ImageView
                android:id="@+id/coffee"
                android:layout_width="176dp"
                android:layout_height="209dp"
                android:src="@drawable/coffee"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="72dp"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                style="@style/customFontStyle"
                android:background="@drawable/rounded_button"
                android:layout_marginLeft="90dp"
                android:id="@+id/decrement_button_view"
                android:layout_below="@id/coffee"
                android:onClick="decrement" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:layout_marginBottom="16dp"
                android:layout_below="@id/coffee"
                style="@style/customFontStyle"
                android:id="@+id/quantity_text_view"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"
                android:layout_toRightOf="@+id/decrement_button_view"
                android:layout_marginLeft="16dp"/>
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                style="@style/customFontStyle"
                android:background="@drawable/rounded_button"
                android:onClick="increment"
                android:id="@+id/increment_button_view"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/coffee"
                android:layout_toRightOf="@+id/quantity_text_view"
                android:layout_toEndOf="@+id/quantity_text_view" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order"
                style="@style/customFontStyle"
                android:onClick="submitOrder"
                android:background="@drawable/submit_button_round"
                android:textColor="#fff"
                android:layout_marginRight="18dp"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="24dp"
                android:id="@+id/button9"
                android:layout_below="@+id/quantity_text_view"
                android:layout_alignRight="@+id/increment_button_view"
                android:layout_alignEnd="@+id/increment_button_view" />

        </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order Summary"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$10"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:id="@+id/order_summary_text_view"
            android:textColor="@android:color/black"/>-->

    </LinearLayout>
</ScrollView>
